--- a/styles/_top.scss
+++ b/styles/_top.scss
@@ -71,7 +71,7 @@
   }
 
   &_right {
-    background-image: url("/assets/images/topR.png");
+    // background-image: url("./assets/images/topR.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
